--- a/app/views/crm/contact-detail.html
+++ b/app/views/crm/contact-detail.html
@@ -1,19 +1,12 @@
 <div ng-init="init()">
 	<form class="form-horizontal" role="form" name="form">
 		<fieldset>
-            <legend translate="FORM_PRIMARY_TITLE"></legend>
+			<legend translate="FORM_PRIMARY_TITLE"></legend>
 			<div class="form-group">
-                <label class="col-md-2 control-label">{{ 'CUSTOMER_COMPANY' | translate }}{{ 'FORM_NAME' | translate }}</label>
+                <label class="col-md-2 control-label" translate="CONTACT_NAME"></label>
 				<div class="col-md-10">
 					<input type="text" class="form-control input-sm"
 						ng-model="customer.Name" placeholder="name">
-				</div>
-			</div>
-			<div class="form-group">
-                <label class="col-md-2 control-label" translate="FORM_SPELL"></label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
 				</div>
 			</div>
 			<div class="form-group">
@@ -24,26 +17,47 @@
 				</div>
 			</div>
 			<div class="form-group">
-                <label class="col-md-2 control-label">{{ 'CUSTOMER_COMPANY' | translate }}{{ 'FORM_CATEGORY' | translate }}</label>
+                <label class="col-md-2 control-label" translate="CONTACT_BIRTHDAY"></label>
 				<div class="col-md-10">
 					<input type="text" class="form-control input-sm"
 						ng-model="customer.Name">
 				</div>
 			</div>
 			<div class="form-group">
-                <label class="col-md-2 control-label" translate="FORM_REGION"></label>
+                <label class="col-md-2 control-label" translate="CONTACT_POST"></label>
 				<div class="col-md-10">
 					<input type="text" class="form-control input-sm"
 						ng-model="customer.Name">
 				</div>
 			</div>
 			<div class="form-group">
-                <label class="col-md-2 control-label">{{ 'CUSTOMER_INDUSTRY' | translate }}{{ 'FORM_CATEGORY' | translate }}</label>
+                <label class="col-md-2 control-label" translate="CONTACT_SEX"></label>
 				<div class="col-md-10">
 					<input type="text" class="form-control input-sm"
 						ng-model="customer.Name">
 				</div>
 			</div>
+			<div class="form-group">
+                <label class="col-md-2 control-label" translate="CONTACT_EDUCATION"></label>
+				<div class="col-md-10">
+					<input type="text" class="form-control input-sm"
+						ng-model="customer.Name">
+				</div>
+			</div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" translate="CUSTOMER_COMPANY"></label>
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name">
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-md-2 control-label" translate="FORM_DEPT"></label>
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name">
+                </div>
+            </div>
 		</fieldset>
 		<fieldset>
             <legend translate="FORM_SECONDARY_TITLE"></legend>
@@ -55,6 +69,13 @@
 				</div>
 			</div>
 			<div class="form-group">
+                <label class="col-md-2 control-label" translate="FORM_ZIP"></label>
+				<div class="col-md-10">
+					<input type="text" class="form-control input-sm"
+						ng-model="customer.Name">
+				</div>
+			</div>
+			<div class="form-group">
                 <label class="col-md-2 control-label" translate="FORM_TEL"></label>
 				<div class="col-md-10">
 					<input type="text" class="form-control input-sm"
@@ -62,21 +83,14 @@
 				</div>
 			</div>
 			<div class="form-group">
+                <label class="col-md-2 control-label" translate="FORM_CELL"></label>
+				<div class="col-md-10">
+					<input type="text" class="form-control input-sm"
+						ng-model="customer.Name">
+				</div>
+			</div>
+			<div class="form-group">
                 <label class="col-md-2 control-label" translate="FORM_FAX"></label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
-				</div>
-			</div>
-			<div class="form-group">
-                <label class="col-md-2 control-label" translate="CUSTOMER_LEGAL_PERSON"></label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
-				</div>
-			</div>
-			<div class="form-group">
-                <label class="col-md-2 control-label" translate="FORM_WEB_SITE"></label>
 				<div class="col-md-10">
 					<input type="text" class="form-control input-sm"
 						ng-model="customer.Name">
