--- a/app/views/crm/customer-detail.html
+++ b/app/views/crm/customer-detail.html
@@ -1,94 +1,113 @@
 <div ng-init="init()">
-	<form class="form-horizontal" role="form" name="form">
-		<fieldset>
+    <form class="form-horizontal" role="form" name="form">
+        <fieldset>
             <legend translate="FORM_PRIMARY_TITLE"></legend>
-			<div class="form-group">
+            <div class="form-group">
                 <label class="col-md-2 control-label">{{ 'CUSTOMER_COMPANY' | translate }}{{ 'FORM_NAME' | translate }}</label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name" placeholder="name">
-				</div>
-			</div>
-			<div class="form-group">
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name" placeholder="name">
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label" translate="FORM_SPELL"></label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
-				</div>
-			</div>
-			<div class="form-group">
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name">
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label" translate="FORM_ID"></label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
-				</div>
-			</div>
-			<div class="form-group">
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name">
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label">{{ 'CUSTOMER_COMPANY' | translate }}{{ 'FORM_CATEGORY' | translate }}</label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
-				</div>
-			</div>
-			<div class="form-group">
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name">
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label" translate="FORM_REGION"></label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
-				</div>
-			</div>
-			<div class="form-group">
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name">
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label">{{ 'CUSTOMER_INDUSTRY' | translate }}{{ 'FORM_CATEGORY' | translate }}</label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
-				</div>
-			</div>
-		</fieldset>
-		<fieldset>
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name">
+                </div>
+            </div>
+        </fieldset>
+        <fieldset>
             <legend translate="FORM_SECONDARY_TITLE"></legend>
-			<div class="form-group">
+            <div class="form-group">
                 <label class="col-md-2 control-label" translate="FORM_ADDRESS"></label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name" placeholder="name">
-				</div>
-			</div>
-			<div class="form-group">
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name" placeholder="name">
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label" translate="FORM_TEL"></label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
-				</div>
-			</div>
-			<div class="form-group">
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name">
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label" translate="FORM_FAX"></label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
-				</div>
-			</div>
-			<div class="form-group">
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name">
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label" translate="CUSTOMER_LEGAL_PERSON"></label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
-				</div>
-			</div>
-			<div class="form-group">
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name">
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label" translate="FORM_WEB_SITE"></label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
-				</div>
-			</div>
-			<div class="form-group">
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name">
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-md-2 control-label" translate="FORM_EMAIL"></label>
-				<div class="col-md-10">
-					<input type="text" class="form-control input-sm"
-						ng-model="customer.Name">
-				</div>
-			</div>
-		</fieldset>
-	</form>
+                <div class="col-md-10">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="customer.Name">
+                </div>
+            </div>
+        </fieldset>
+        <fieldset>
+            <legend translate="CUSTOMER_CONTACT_LIST"></legend>
+            <table class="table table-striped table-hover table-responsive">
+                <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Table heading</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="item in customerList">
+                        <th scope="row">1</th>
+                        <td ng-click="selectCustomer(item)">{{item.Name}}</td>
+                        <td><button class="btn btn-default" ng-click="editCustomer(item)" translate="ACTION_EDIT"></button></td>
+                    </tr>
+                </tbody>
+            </table>
+        </fieldset>
+    </form>
 </div>
