--- a/app/views/common/category-treeview.html
+++ b/app/views/common/category-treeview.html
@@ -1,5 +1,6 @@
 ﻿<div ng-init="init()">
     <ul>
-        <li ng-repeat="item in categoryList" ng-click="selectCategory(item)">{{item.Name}}</li>
+        <li ng-repeat="item in categoryList" ng-click="selectCategory(item)">{{item.text}}</li>
     </ul>
+    <div id="tree"></div>
 </div>
